Deployment from Statiq

--- a/release-notes/v250.html
+++ b/release-notes/v250.html
@@ -372,6 +372,7 @@
 <h2 id="notifications">Notifications</h2>
 <ul>
 <li>[Enhancement][Android] The notification job is only scheduled when there a scheduled notification</li>
+<li>[Enhancement] Cross platform (repeatable) geofence based notifications</li>
 </ul>
 
                                 </div>
