Deployment from Statiq

--- a/release-notes/v250.html
+++ b/release-notes/v250.html
@@ -371,8 +371,11 @@
 </ul>
 <h2 id="notifications">Notifications</h2>
 <ul>
-<li>[Enhancement][Android] The notification job is only scheduled when there a scheduled notification</li>
+<li>[Enhancement][Android] Android now uses exact timers as opposed to jobs</li>
+<li>[Enhancement][iOS] Channel importance now maps to iOS interruption level</li>
 <li>[Enhancement] Cross platform (repeatable) geofence based notifications</li>
+<li>[Enhancement] Ability to set thread (iOS)/group (Android) using notification.Thread</li>
+<li>[Enhancement][Android][iOS] Scheduled and Interval based repeatable notifications</li>
 </ul>
 
                                 </div>
