Deployment from Statiq

--- a/release-notes/v250.html
+++ b/release-notes/v250.html
@@ -359,6 +359,7 @@
 <li>[Enhancement] Improved boilerplate 3rd party library generation - now includes FFImageLoading</li>
 <li>[Enhancement] More extension methods (RX SwitchSelect, Task WithTimeout)</li>
 <li>[Enhancement] Internal improvements to repository</li>
+<li>[Enhancement] Generator now detects and initializes Xamarin.Forms.Maps</li>
 </ul>
 <h2 id="push-firebase">Push (Firebase)</h2>
 <ul>
