Deployment from Statiq

--- a/release-notes/v250.html
+++ b/release-notes/v250.html
@@ -361,6 +361,10 @@
 <li>[Enhancement] Internal improvements to repository</li>
 <li>[Enhancement] Generator now detects and initializes Xamarin.Forms.Maps</li>
 </ul>
+<h2 id="gps">GPS</h2>
+<ul>
+<li>[BREAKING] GpsAccuracy replaces Priority, Precise, Interval, ThrottledInterval, &amp; MinimumDistance.  These filters didn't work on iOS</li>
+</ul>
 <h2 id="push-firebase">Push (Firebase)</h2>
 <ul>
 <li>[Enhancement][iOS] Push to next major version of iOS firebase libraries</li>
